CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT("ldap" VERSION 1.0.1)

# RPM/DEB and CENTOS7/CENTOS8/ROCKY9/UBU1804/UBU2004/UBU2204
IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt")
	FILE(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt OSRELEASE)
ELSEIF (EXISTS "/OSRELEASE.txt")
	FILE(STRINGS /OSRELEASE.txt OSRELEASE)
ELSE()
	MESSAGE(FATAL_ERROR "Missing OSRELEASE")
ENDIF()

IF (OSRELEASE MATCHES "CENTOS7")
	SET(CPACK_GENERATOR "RPM")
	ADD_DEFINITIONS(-DHALON_CA_FILE="/etc/ssl/certs/ca-bundle.crt")
ELSEIF (OSRELEASE MATCHES "CENTOS8")
	SET(CPACK_GENERATOR "RPM")
	ADD_DEFINITIONS(-DHALON_CA_FILE="/etc/ssl/certs/ca-bundle.crt")
ELSEIF (OSRELEASE MATCHES "ROCKY9")
	SET(CPACK_GENERATOR "RPM")
	ADD_DEFINITIONS(-DHALON_CA_FILE="/etc/ssl/certs/ca-bundle.crt")
ELSEIF (OSRELEASE MATCHES "UBU1804")
	SET(CPACK_GENERATOR "DEB")
	ADD_DEFINITIONS(-DHALON_CA_FILE="/etc/ssl/certs/ca-certificates.crt")
ELSEIF (OSRELEASE MATCHES "UBU2004")
	SET(CPACK_GENERATOR "DEB")
	ADD_DEFINITIONS(-DHALON_CA_FILE="/etc/ssl/certs/ca-certificates.crt")
ELSEIF (OSRELEASE MATCHES "UBU2204")
	SET(CPACK_GENERATOR "DEB")
	ADD_DEFINITIONS(-DHALON_CA_FILE="/etc/ssl/certs/ca-certificates.crt")
ELSE()
	MESSAGE(FATAL_ERROR "Invalid OSRELEASE")
ENDIF()

ADD_DEFINITIONS(-DHALON_CA_PATH="/etc/ssl/certs")

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -Wvla -Wshadow -Wconversion -Wno-sign-conversion -O2 -fno-strict-aliasing -Wextra -Wno-unused-parameter")
SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++17 -Wall -Wvla -Wshadow -Wconversion -Wno-sign-conversion -Wno-c++11-narrowing -O2 -fno-strict-aliasing -Wextra -Wno-unused-parameter")

ADD_LIBRARY(ldap SHARED
	ldap.cpp
)

SET_TARGET_PROPERTIES(ldap PROPERTIES PREFIX "")

IF (${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD")
TARGET_LINK_LIBRARIES(ldap
	/usr/local/lib/libldap.so
)
ELSE()
TARGET_LINK_LIBRARIES(ldap
	-lldap
)
ENDIF()

INCLUDE_DIRECTORIES(
	/opt/halon/include
	/usr/local/include
)

IF(EXISTS "/etc/os-release")
	EXECUTE_PROCESS(COMMAND "sed" "-ne" "s/^ID=\"\\?\\([a-z]\\+\\)\"\\?$/\\1/p" "/etc/os-release" OUTPUT_VARIABLE OS_RELEASE_ID OUTPUT_STRIP_TRAILING_WHITESPACE)
	EXECUTE_PROCESS(COMMAND "sed" "-ne" "s/^VERSION_ID=\"\\?\\([0-9\\.]\\+\\)\"\\?$/\\1/p" "/etc/os-release" OUTPUT_VARIABLE OS_RELEASE_VERSION_ID OUTPUT_STRIP_TRAILING_WHITESPACE)
	EXECUTE_PROCESS(COMMAND "uname" "-m" OUTPUT_VARIABLE OS_RELEASE_ARCH OUTPUT_STRIP_TRAILING_WHITESPACE)
	SET(SYSTEM_NAME "${OS_RELEASE_ID}-${OS_RELEASE_VERSION_ID}-${OS_RELEASE_ARCH}")
ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/ldap.so DESTINATION plugins)
INSTALL(FILES ldap.classes.json DESTINATION share/plugins)

IF(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14.0") 
	FILE(CREATE_LINK "/opt/halon/plugins/ldap.so" "${CMAKE_CURRENT_BINARY_DIR}/ldap.so.link" SYMBOLIC)
ELSE()
	ADD_CUSTOM_TARGET(link_target ALL COMMAND ${CMAKE_COMMAND} -E create_symlink "/opt/halon/plugins/ldap.so" "${CMAKE_CURRENT_BINARY_DIR}/ldap.so.link")
ENDIF()

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/ldap.so.link" DESTINATION plugins/autoload/smtpd RENAME ldap.so)
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/ldap.so.link" DESTINATION plugins/autoload/hsh RENAME ldap.so)

SET(CMAKE_INSTALL_PREFIX "/opt/halon")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")

IF (CPACK_GENERATOR MATCHES "DEB")
	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.8)")
	SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm")
ENDIF()
IF (CPACK_GENERATOR MATCHES "RPM")
	SET(CPACK_RPM_PACKAGE_AUTOREQPROV ON)
	SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.8")
	SET(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
	SET(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postrm")
ENDIF()

SET(CPACK_PACKAGE_NAME "halon-extras-ldap")
SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Halon extras LDAP client")
SET(CPACK_PACKAGE_DESCRIPTION "Halon extras LDAP client")
SET(CPACK_PACKAGE_CONTACT "Halon support@halon.io")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PROJECT_VERSION}-${SYSTEM_NAME}")

SET(CPACK_DEBIAN_PACKAGE_SECTION "mail")

INCLUDE(CPack)
